--- a/1.html
+++ b/1.html
@@ -1,23 +1,23 @@
 <!doctype html>
 <html>
-<head><title>CR Logitech입니다.</title>
+<head><title>CR Loch입니다.</title>
 <meta charset="utf-8">
 </head>
 <boby>
     <h1><a href="index.html">WEB</a></h1>
 <ul>
-    <li>제작자 : 서현민</li>
+    <li>제작자 : </li>
     </ul>
 <ol>
-<li><a href="1.html">항공 수입</a></li>
-    <li><a href="2.html">항공 수출</a></li>
-    <li><a href="3.html">해상</a></li>
+<li><a href="1.html">항입</a></li>
+    <li><a href="2.html">항출</a></li>
+    <li><a href="3.html">해</a></li>
 </ol>
 <h1><strong>CR LOGITECH</strong><img src="독일.png" width="50"></h1>
 <a href="https://dict.naver.com/dict.search?query=%ED%95%AD%EA%B3%B5%EC%88%98%EC%9E%85&from=tsearch" target="_blank" title="네이버 사전">항공수입이란?</a>
-<p><strong>항공으로 수입하는 화물</strong></p>
+<p><strong>항물</strong></p>
 
 <p style="margin-top:30px;">
--주식회사 시알로지텍</p>
+-주식텍</p>
 </boby>
 </html>
