--- a/2.html
+++ b/2.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
-<head><title>CR Logitech입니다.</title>
+<head><title>C 입니다.</title>
 <meta charset="utf-8">
 </head>
 <boby>
     <h1><a href="index.html">WEB</a></h1>
 <ul>
-    <li>제작자 : 서현민</li>
+    <li>제</li>
     </ul>
 <ol>
     <li><a href="1.html">항공 수입</a></li>
@@ -15,10 +15,10 @@
 </ol>
 <h1><strong>CR LOGITECH</strong></h1>
 <a href="https://crlogitech.com/" target="_blank" title="시알로지텍 홈페이지">CR Logitech</a>
-<p><strong>항공특송 <u>수입 및 수출</u> 특송·포워딩 업체</strong></p>
+<p><strong>항체</strong></p>
 <img src="독일.png" width="50">
 
 <p style="margin-top:30px;">
-항공 수출은 잘 <strong>몰라염</strong></p>
+항염</strong></p>
 </boby>
 </html>
