--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
     <li><a href="3.html">해상</a></li>
 </ol>
 <h1><strong>CR LOGITECH</strong></h1>
-<a href="https://crlogitech.com/" target="_blank" title="시알로지텍 홈페이지">CR Logitech</a>
+<a href="htttech</a>
 <p><strong>항체</strong></p>
 <img src="독일.png" width="50">
 
