--- a/3.html
+++ b/3.html
@@ -14,7 +14,7 @@
     <li><a href="3.html">해</a></li>
 </ol>
 <h1><strong>CR LOGITECH</strong></h1>
-<a href="https://crlogitech.com/" target="_blank" title="시알로지텍 홈페이지">CR Logitech</a>
+<a htech</a>
 <p><strong>항</strong></p>
 <img src="독일.png" width="50">
 
