--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>CR Loch입니다.</title>
+<head><title>C.</title>
 <meta charset="utf-8">
 </head>
 <boby>
@@ -13,8 +13,8 @@
     <li><a href="2.html">항출</a></li>
     <li><a href="3.html">해</a></li>
 </ol>
-<h1><strong>CR LOGITECH</strong><img src="독일.png" width="50"></h1>
-<a href="https://dict.naver.com/dict.search?query=%ED%95%AD%EA%B3%B5%EC%88%98%EC%9E%85&from=tsearch" target="_blank" title="네이버 사전">항공수입이란?</a>
+<h1><strong>Cth="50"></h1>
+<a href="https://dict.naver.com/dict.search?query=%ED%95%AD%EA%B3%B5%EC%88%98%EC%9E%85&from=tsearch" target="_blank" title="네이버 사전">란?</a>
 <p><strong>항물</strong></p>
 
 <p style="margin-top:30px;">
