--- a/2.html
+++ b/2.html
@@ -9,11 +9,11 @@
     <li>제</li>
     </ul>
 <ol>
-    <li><a href="1.html">항공 수입</a></li>
-    <li><a href="2.html">항공 수출</a></li>
-    <li><a href="3.html">해상</a></li>
+    <li><a href="1.html">항</a></li>
+    <li><a href="2.html">항</a></li>
+    <li><a href="3.html">상</a></li>
 </ol>
-<h1><strong>CR LOGITECH</strong></h1>
+<h1><strong/h1>
 <a href="htttech</a>
 <p><strong>항체</strong></p>
 <img src="독일.png" width="50">
