--- a/3.html
+++ b/3.html
@@ -13,7 +13,7 @@
     <li><a href="2.html"></a></li>
     <li><a href="3.html">해</a></li>
 </ol>
-<h1><strong>CR LOGITECH</strong></h1>
+<h1><strong>Crong></h1>
 <a htech</a>
 <p><strong>항</strong></p>
 <img src="독일.png" width="50">
