--- a/index.html
+++ b/index.html
@@ -13,19 +13,10 @@
     <li><a href="2.html">항출</a></li>
     <li><a href="3.html">상</a></li>
 </ol>
-<h1><strong>CR LOGITECH</strong></h1>
+<h1><stro</strong></h1>
 <a href="https:/com/" target="_blank" title="시지">CR Logitech</a>
 <p><strong>항체</strong></p>
 <img src="독일.png" width="50">
 
 <p style="margin-top:30px;">
-안다</p>
-</boby>
-</html>
 
-<h1 class="logo">
-    <a tabindex="2" accesskey="1" href="/">
-        <img src=".2008/site/imges/logo-w3c-mobile-l
-    </a>
-    <span clas="alt-logo">W3C</span>
-</h1>
