--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="3.html">상</a></li>
 </ol>
 <h1><stro</strong></h1>
-<a href="https:/com/" target="_blank" title="시지">CR Logitech</a>
+<a href="https:/com/" target="_blank" title="시지">C</a>
 <p><strong>항체</strong></p>
 <img src="독일.png" width="50">
 
